# f1nanc3

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: sample_portfolio.json
docs/: SESSION_2025-12-16.md  devlog_wizard.md  fire_guide.md
examples/: fire_example.py
notebooks/: README.md
src/: __init__.py  portfolio.py
src/f1nanc3/: fire_calculator.py  portfolio.py
tests/: conftest.py  test_fire_calculator.py  test_fire_calculator.py.save  test_portfolio.py
