[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1nanc3"
version = "0.1.0"
description = "Personal finance toolkit for FIRE planning"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]
